parser/tests/bad/sub01-2.st
% the name after 'end' should be the name of the 'subprogram'
%   function

function p(i: int): int
  % empty
end q
